# pi-top-battery-sys

./: .README.kate-swp  Makefile.am  README  TESTTEST  a.out  battery  battery.cpp  battery_simple  battery_simple.cpp  configure  configure.ac  makefile  pi-top-battery-sys.kdev4  pi-top-battery-sys.service  pi-top-battery-sys.timer
.kdev4/: pi-top-battery-sys.kdev4
autom4te.cache/: output.0  requests  traces.0
batt/: dbg.h
lxpanel-plugin/: Makefile.am  TESTTEST  batt.c  batt_sys.h
src/: Makefile.am
