# what flags you want to pass to the C compiler & linker
CFLAGS = 
LDFLAGS = -lwiringPi

# this lists the binaries to produce, the (non-PHONY, binary) targets in
# the previous manual Makefile
bin_PROGRAMS = battery battery_simple
battery_SOURCES = battery.cpp
battery_simple_SOURCES = battery_simple.cpp